Premesten media player vo poseben thread

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,14 @@
             android:layout_above="@+id/meta_data"
             android:layout_alignParentEnd="true" />
 
+        <ProgressBar
+            android:id="@+id/radioProgressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+
     </RelativeLayout>
 
     <LinearLayout
