--- a/app/src/main/res/layout/activity_alarm2.xml
+++ b/app/src/main/res/layout/activity_alarm2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -61,7 +61,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/current_alarm_layout"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -124,10 +126,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:buttonTint="#ffffff"
+                    android:checked="true"
                     android:text="@string/interval_off"
                     android:textColor="#ffffff"
-                    android:textStyle="bold"
-                    android:checked="true" />
+                    android:textStyle="bold" />
 
             </RadioGroup>
 
@@ -143,12 +145,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/button_stop_alarm" />
 
-            <Button
-                android:id="@+id/button_add_alarm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/button_add_alarm" />
-
             <TextView
                 android:id="@+id/alarm_msg"
                 android:layout_width="match_parent"
@@ -162,4 +158,17 @@
 
     </ScrollView>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/alarm_fab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginTop="48dp"
+        app:srcCompat="@drawable/alarm" />
+
+</RelativeLayout>
