--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,233 +1,341 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.kanal77.kanal77.Contact">
+
+
 
     <LinearLayout
         android:id="@+id/contact_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:orientation="horizontal">
+
 
         <TextView
             android:id="@+id/contact_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/contact_title"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
             android:textSize="30sp"
             android:textStyle="bold" />
+
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10sp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/contact_title_layout">
 
-        <LinearLayout
-            android:id="@+id/contacts_layout"
+
+    <LinearLayout
+        android:id="@+id/phone_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="20dp">
+
+
+        <ImageView
+            android:id="@+id/phone_contact_image"
+            android:layout_width="60sp"
+            android:layout_height="40sp"
+            android:layout_gravity="left"
+            app:srcCompat="@drawable/phone_icon" />
+
+        <TextView
+            android:id="@+id/phone_contact_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:autoLink="phone"
+            android:text="@string/contact_phone"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
 
-            <TableLayout
-                android:id="@+id/phone_contacts_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="15sp">
+    </LinearLayout>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10sp">
+    <LinearLayout
 
-                    <TextView
-                        android:id="@+id/contact_phones"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15sp"
-                        android:text="@string/contact_phones"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </TableRow>
+        android:id="@+id/fax_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/phone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/contact_phone" />
+        <ImageView
+            android:id="@+id/fax_contact_image"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/fax_icon" />
 
-                </TableRow>
+        <TextView
+            android:id="@+id/fax_contact_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/contact_fax"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/fax"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/contact_fax" />
+    <LinearLayout
+        android:id="@+id/emai_title_layout_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
 
-                </TableRow>
 
-            </TableLayout>
+        <TextView
+            android:id="@+id/email_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/contact_email"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-            <TableLayout
-                android:id="@+id/email_contacts_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="15sp">
+    </LinearLayout>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10sp">
 
-                    <TextView
-                        android:id="@+id/email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15sp"
-                        android:text="@string/contact_email"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </TableRow>
+    <LinearLayout
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+        android:id="@+id/official_text_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp">
 
-                    <TextView
-                        android:id="@+id/official_email_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5sp"
-                        android:text="@string/official_email_text"
-                        android:textStyle="bold"
-                        tools:text="@string/official_email_text" />
 
-                </TableRow>
+        <TextView
+            android:id="@+id/official_text_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/official_email_text"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/official_email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/official_email"
-                        tools:text="@string/official_email" />
 
-                </TableRow>
+    <LinearLayout
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="15sp">
+        android:id="@+id/official_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp">
 
-                    <TextView
-                        android:id="@+id/webdesc_email_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5sp"
-                        android:paddingTop="15sp"
-                        android:text="@string/webdesc_email_text"
-                        android:textStyle="bold"
-                        tools:text="@string/webdesc_email_text" />
 
-                </TableRow>
+        <ImageView
+            android:id="@+id/official_mail_contact_image"
+            android:layout_width="56dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/emailicon"/>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/official_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/official_email"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/webdesc_email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/webdesc_email"
-                        tools:text="@string/webdesc_email" />
+    </LinearLayout>
 
-                </TableRow>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="15sp">
+    <LinearLayout
 
-                    <TextView
-                        android:id="@+id/finance_email_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5sp"
-                        android:paddingTop="15sp"
-                        android:text="@string/finance_email_text"
-                        android:textStyle="bold"
-                        tools:text="@string/finance_email_text" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/fiannc_email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/finance_email"
-                        tools:text="@string/finance_email" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="15sp">
-
-                    <TextView
-                        android:id="@+id/marketin_email_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5sp"
-                        android:paddingTop="15sp"
-                        android:text="@string/marketing_email_text"
-                        android:textStyle="bold"
-                        tools:text="@string/marketing_email_text" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/marketing_email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/marketing_email"
-                        tools:text="@string/marketing_email" />
-
-                </TableRow>
+    android:id="@+id/Web_Desc_text_email_contact_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingTop="10dp"
+    android:paddingLeft="15dp">
 
 
 
-            </TableLayout>
+    <TextView
+        android:id="@+id/Web_Desc_text_mail_contact_"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:autoLink="email"
+        android:text="@string/webdesc_email_text"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorLink="@color/colorPrimaryDark"
+        android:textSize="20sp" />
 
-        </LinearLayout>
-    </ScrollView>
+</LinearLayout>
 
-</RelativeLayout>
+
+    <LinearLayout
+
+        android:id="@+id/Web_Desc_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp">
+
+
+        <ImageView
+            android:id="@+id/Web_Desc_mail_contact_image"
+            android:layout_width="56dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/emailicon"/>
+
+        <TextView
+            android:id="@+id/Web_Desc_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/webdesc_email"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+
+        android:id="@+id/finance_text_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="10dp"
+        android:paddingLeft="15dp">
+
+
+
+        <TextView
+            android:id="@+id/finance_text_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/finance_email_text"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+
+        android:id="@+id/finance_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp">
+
+
+        <ImageView
+            android:id="@+id/finance_mail_contact_image"
+            android:layout_width="56dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/emailicon"/>
+
+        <TextView
+            android:id="@+id/finance_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/finance_email"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+
+        android:id="@+id/marketing_text_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="10dp"
+        android:paddingLeft="15dp">
+
+
+
+        <TextView
+            android:id="@+id/marketing_text_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/marketing_email_text"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+
+        android:id="@+id/marketing_email_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp">
+
+
+        <ImageView
+            android:id="@+id/marketing_mail_contact_image"
+            android:layout_width="56dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/emailicon"/>
+
+        <TextView
+            android:id="@+id/marketing_mail_contact_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="email"
+            android:text="@string/marketing_email"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorLink="@color/colorPrimaryDark"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/kanal77logo30t" />
+
+    </RelativeLayout>
+
+
+</LinearLayout>
