--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,29 +16,45 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/radio_logo_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"
 
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="0.5"
             android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="235dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/kanal771"
-            android:layout_gravity="center"/>
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="235dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/kanal771" />
+
+            <ProgressBar
+                android:id="@+id/radioProgressBar"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="76dp"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/button_startstop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.75"
                 android:layout_gravity="center"
-                android:text="PAUSE" />
+                android:layout_weight="1.75"
+                android:text="PAUSE"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="26dp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -61,13 +77,6 @@
         </RelativeLayout>
 
     </LinearLayout>
-        <ProgressBar
-            android:id="@+id/radioProgressBar"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
 
 
     <LinearLayout
