--- a/app/src/main/res/layout/activity_wheater.xml
+++ b/app/src/main/res/layout/activity_wheater.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.5"
-        android:background="@color/colorWeather"
+        android:background="@color/colorPrimary"
         android:padding="20sp">
 
         <ImageView
