--- a/app/src/main/res/drawable/boarder.xml
+++ b/app/src/main/res/drawable/boarder.xml
@@ -2,11 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="2dp"
-        android:topRightRadius="0dp"
-        android:bottomRightRadius="0dp"
-        android:bottomLeftRadius="0dp" />
+        android:radius="2sp"
+        android:topRightRadius="10sp"
+        android:topLeftRadius="10sp"
+        android:bottomRightRadius="10sp"
+        android:bottomLeftRadius="10sp" />
     <stroke
-        android:width="1dp"
-        android:color="@android:color/black" />
+        android:width="2sp"
+        android:color="@color/colorPrimaryDark" />
 </shape>
