--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,30 +45,38 @@
 
             <Button
                 android:id="@+id/button_startstop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="75sp"
+                android:layout_height="75sp"
                 android:layout_gravity="center"
+                android:layout_marginEnd="29dp"
                 android:layout_weight="1.75"
-                android:text="PAUSE"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="26dp" />
+                android:background="@drawable/pause1"
+                android:text=""
+                android:layout_alignBottom="@+id/radioProgressBar"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
+        <View android:id="@+id/separator"
+            android:background="@color/colorPrimaryDark"
+            android:layout_width = "fill_parent"
+            android:layout_height="1sp"/>
+
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5sp">
 
         <TextView
             android:id="@+id/meta_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:background="@color/colorAccent"
             android:layout_gravity="center"
-            android:text=""
+            android:text="Song - Artist"
+            android:paddingLeft="20sp"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true" />
 
@@ -78,6 +86,11 @@
 
     </LinearLayout>
 
+    <View android:id="@+id/separator2"
+        android:background="@color/colorPrimaryDark"
+        android:layout_width = "fill_parent"
+        android:layout_height="1sp"
+        android:layout_marginBottom="10sp"/>
 
     <LinearLayout
         android:id="@+id/icons_layout"
