--- a/app/src/main/res/layout/weather_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/weather_spinner_dropdown_item.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:paddingBottom="5dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp"
+    android:paddingBottom="10sp"
+    android:paddingLeft="10sp"
+    android:paddingRight="10sp"
+    android:paddingTop="10sp"
     android:singleLine="true"
     android:textSize="16sp"
     android:textStyle="bold"
