Verzija so sredeni sliki

--- a/app/src/main/res/drawable/boarder.xml
+++ b/app/src/main/res/drawable/boarder.xml
@@ -10,4 +10,8 @@
     <stroke
         android:width="2sp"
         android:color="@color/colorPrimaryDark" />
+
+    <solid android:color="#ffffff" />
+
+
     </shape>
