--- a/app/src/main/res/layout/weather_spinner_item.xml
+++ b/app/src/main/res/layout/weather_spinner_item.xml
@@ -4,11 +4,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
-    android:gravity="left"
+    android:textSize="40sp"
+    android:gravity="center"
     android:textStyle="bold"
-    android:padding="5dip"
-    android:background="#ffffff"
+    android:padding="5sp"
+    android:background="#ffffffff"
     android:textColor="@color/colorPrimaryDark"
     android:layout_gravity="center"
     />
